--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "php": ">=5.5",
     "ext-curl": "*",
     "ext-json": "*",
-    "ext-mbstring": "*"
+    "ext-mbstring": "*",
+    "guzzlehttp/guzzle": "^7.1"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.*"
